# backend

./: .gitignore  Dockerfile  docker-compose-cicd.yml  docker-compose-file-template.yml  pyproject.toml  pytest.ini  start.py
alembic/: env.py
alembic/versions/: 09533f34a857_update_datetime_col_in_order_and_.py  0d9cd3d1f829_update_table_schema_of_stadium_and_.py  19db0ebbcc29_add_is_enabled_col_for_table_.py  1c7635662047_init_tables.py  5dae55ceb665_delete_table_stadiumcourtdisable_and_.py  69f66df7278b_add_google_map_url_column_for_table_.py  70094dc45cdd_update_stadium_court_ondelete_action_to_.py  a7896d7f217a_init_user_table.py  f53d264809ee_add_status_column_for_table_team_member.py
app/: __init__.py  enums.py  main.py  utils.py
app/core/: config.py  security.py
app/core/scheduler/: matching_event.py
app/crud/: __init__.py  crud_order.py  crud_stadium.py  crud_stadium_available_time.py  crud_stadium_court.py  crud_stadium_court_disable.py  crud_stadium_disable.py  crud_team.py  crud_team_member.py  crud_user.py
app/database/: session.py
app/email/: send_email.py
app/models/: __init__.py  order.py  stadium.py  stadium_available_time.py  stadium_court.py  stadium_court_disable.py  stadium_disable.py  team.py  team_member.py  user.py
app/routers/: deps.py
app/schemas/: __init__.py  order.py  sso_login.py  stadium.py  stadium_available_time.py  stadium_court.py  stadium_court_disable.py  stadium_disable.py  team.py  team_member.py  token.py  user.py
scripts/: add_table.sh  prestart.sh  run_test.sh
test/: contest.py  test_auth.py  test_order.py  test_stadium.py  test_stadium_court.py  test_team.py  test_team_member.py  test_user.py
(+11 files in other folders)
